--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -1279,6 +1279,7 @@ pywrap_library(
         "//tensorflow/python/client:_pywrap_device_lib",
         "//tensorflow/python/client:_pywrap_events_writer",
         "//tensorflow/python/client:_pywrap_tf_session",
+        "//tensorflow/python/grappler:_pywrap_tf_item",
         "//tensorflow/python/data/experimental/service:_pywrap_server_lib",
         "//tensorflow/python/data/experimental/service:_pywrap_snapshot_utils",
         "//tensorflow/python/data/experimental/service:_pywrap_utils",
@@ -1325,6 +1326,15 @@ pywrap_library(
         "//tensorflow/python/util:_function_parameter_canonicalizer_binding_for_test",
         "//tensorflow/python/client:_pywrap_debug_events_writer",
         "//tensorflow/python/tpu:_pywrap_tpu_embedding",
+        "//tensorflow/compiler/mlir/python/mlir_wrapper:filecheck_wrapper",
+        "//tensorflow/python/framework:_errors_test_helper",
+        "//tensorflow/python/framework:_python_memory_checker_helper",
+        "//tensorflow/python/grappler:_pywrap_cost_analyzer",
+        "//tensorflow/python/util:_pywrap_kernel_registry",
+        "//tensorflow/python/grappler:_pywrap_model_analyzer",
+        "//tensorflow/python/framework:_pywrap_python_api_info",
+        "//tensorflow/python/framework:_pywrap_python_tensor_converter",
+        "//tensorflow/python/framework/experimental:_unified_api",
     ],
     visibility = ["//visibility:public"],
 )
