--- a/tensorflow/compiler/mlir/tfr/BUILD
+++ b/tensorflow/compiler/mlir/tfr/BUILD
@@ -353,6 +353,7 @@ pybind_extension(
         "@llvm-project//mlir:SCFDialect",
         "@llvm-project//mlir:ShapeDialect",
     ],
+    visibility = ["//tensorflow/python:__pkg__"],
 )
 
 py_strict_library(
