--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -1335,6 +1335,14 @@ pywrap_library(
         "//tensorflow/python/framework:_pywrap_python_api_info",
         "//tensorflow/python/framework:_pywrap_python_tensor_converter",
         "//tensorflow/python/framework/experimental:_unified_api",
+        "//tensorflow/python/framework:_pywrap_python_api_parameter_converter",
+        "//tensorflow/python/framework:_op_def_util",
+        "//tensorflow/compiler/mlir/quantization/stablehlo/python:pywrap_quantization",
+        "//tensorflow/compiler/mlir/tfr:tfr_wrapper",
+        "//tensorflow/python/framework:_py_context_manager",
+        "//tensorflow/python/framework/experimental:_math_ops",
+        "//tensorflow/python/framework/experimental:_nn_ops",
+        "//tensorflow/python/framework/experimental:_tape",
     ],
     visibility = ["//visibility:public"],
 )
