Integrate CHLO->StableHLO lowerings in XLA
PiperOrigin-RevId: 609160162

--- a/tensorflow/compiler/mlir/lite/BUILD
+++ b/tensorflow/compiler/mlir/lite/BUILD
@@ -1380,6 +1380,7 @@ cc_library(
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:Transforms",
         "@local_xla//xla/mlir_hlo:mhlo_passes",
+        "@stablehlo//:stablehlo_passes",
         "@stablehlo//stablehlo/experimental:experimental_stablehlo_passes",
     ],
 )
